<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ContactUs">

    <ImageView
        android:id="@+id/bg_img"
        android:layout_width="404dp"
        android:layout_height="345dp"
        android:contentDescription="TODO"
        android:paddingTop="150dp"
        android:scaleType="centerCrop"

        android:src="@drawable/contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bg_img"
        android:elevation="12dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/bg_img"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:text="@string/contactUs"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/line_view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/contact"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:background="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line_view"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/imgg"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:contentDescription="TODO"
                    android:src="@drawable/phone_call" />

                <LinearLayout
                    android:id="@+id/lin_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgg"
                    android:layout_toRightOf="@id/imgg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/phone_num"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/_1_2368802636"
                        android:textColor="#0277BD"
                        android:textColorHighlight="@android:color/holo_red_dark"
                        android:textSize="16sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/img_mob"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/lin_1"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/email" />

                <LinearLayout
                    android:id="@+id/lin_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lin_1"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/img_mob"
                    android:layout_toRightOf="@id/img_mob"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/email_add"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/scandy_email"
                        android:textColor="#0277BD"
                        android:textColorHighlight="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/mail_img"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/lin_2"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/question" />

                <LinearLayout
                    android:id="@+id/lin_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lin_2"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/mail_img"
                    android:layout_toRightOf="@id/mail_img"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/ask_your_query"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/send_your_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/send_your_message"
                        android:textColor="#0277BD"
                        android:textColorHighlight="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/imgProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="250dp">

                        <ImageView
                            android:id="@+id/facebook"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/facebook" />

                        <ImageView
                            android:id="@+id/instagram"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="55dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/instagram" />

                        <ImageView
                            android:id="@+id/youtube"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="110dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/youtube" />

                        <ImageView
                            android:id="@+id/share"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="165dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/share" />


                    </RelativeLayout>

                </RelativeLayout>


            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>



</androidx.appcompat.widget.LinearLayoutCompat>